[tool.poetry]
name = "orra-monorepo"
version = "0.0.1"
description = "Orra mono-repo"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/grro-xyz/orra"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
black = "^24.2.0"
langgraph = "^0.0.49"
typer = "^0.12.3"
fastapi = "^0.111.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
