[tool.poetry]
name = "orra-monorepo"
version = "0.0.1"
description = "Orra mono-repo"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/grro-xyz/orra"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
