[tool.poetry]
name = "dependabot"
version = "0.1.0"
description = "A dependabot example project that uses agents to update dependencies.
authors = []
readme = "README.md"
package-mode = false
packages = [
    { include = "activities" }
]

[tool.poetry.dependencies]
python = "^3.12"
orra = {path = "../../libs/orra", develop = true}
orra_cli = {path = "../../libs/cli", develop = true}


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
