[tool.poetry]
name = "orra-create-run"
version = "0.1.0"
description = "An example that illustrates the orra convention for setting up a workflow project."
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
