[tool.poetry]
name = "orra-convention"
version = "0.1.0"
description = "An example that illustrates the orra convention for setting up a workflow project."
authors = []
readme = "README.md"
package-mode = false
packages = [
    { include = "activities" }
]

[tool.poetry.dependencies]
python = "^3.12"
orra = {path = "../../libs/orra", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
