[tool.poetry]
name = "orra-convention"
version = "0.1.0"
description = "An example that illustrates the orra convention for setting up a workflow project."
authors = []
readme = "README.md"
package-mode = false
packages = [
    { include = "activities" }
]

[tool.poetry.dependencies]
python = "^3.12"
orra = {path = "../../libs/orra", develop = true}


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
