[tool.poetry]
name = "orra-cli"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = "^0.12.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
orra = {path = "../../libs/orra", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
